<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.EditChecklistFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
      android:id="@+id/toolbar_edit_checklist"
      layout="@layout/toolbar_layout"
      app:title="@{`변경사항 추가`}" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/close_button"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginStart="@dimen/app_horizontal_padding"
      android:background="@drawable/ic_btn_gnb_x"
      android:elevation="5dp"
      app:layout_constraintBottom_toBottomOf="@id/toolbar_edit_checklist"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/toolbar_edit_checklist" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/repair_type_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/app_horizontal_padding"
      android:layout_marginTop="28dp"
      android:fontFamily="@font/notosanskr_medium"
      android:includeFontPadding="false"
      android:text="@string/repair_type_text"
      android:textColor="@color/black"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/toolbar_edit_checklist"
      tools:text="변경 유형" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/purchase_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="6dp"
      android:layout_marginEnd="6dp"
      android:background="@drawable/bg_ar_asset_rounded_inactive"
      android:gravity="center"
      android:paddingVertical="10dp"
      android:stateListAnimator="@null"
      android:text="@string/purchase"
      android:textSize="14sp"
      app:layout_constraintEnd_toStartOf="@id/repair_button"
      app:layout_constraintStart_toStartOf="@id/repair_type_title"
      app:layout_constraintTop_toBottomOf="@id/repair_type_title"
      tools:text="구매" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/repair_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="6dp"
      android:layout_marginEnd="@dimen/app_horizontal_padding"
      android:background="@drawable/bg_ar_asset_rounded_inactive"
      android:gravity="center"
      android:paddingVertical="10dp"
      android:stateListAnimator="@null"
      android:text="@string/repair"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/purchase_button"
      app:layout_constraintTop_toTopOf="@id/purchase_button"
      tools:text="수리" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/asset_photo_type_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/app_horizontal_padding"
      android:layout_marginTop="28dp"
      android:fontFamily="@font/notosanskr_medium"
      android:includeFontPadding="false"
      android:text="@string/asset_photo_text"
      android:textColor="@color/black"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/purchase_button"
      tools:text="제품 사진" />

    <androidx.appcompat.widget.AppCompatImageButton
      android:id="@+id/add_asset_photo_button"
      android:layout_width="match_parent"
      android:layout_height="116dp"
      android:layout_marginHorizontal="@dimen/app_horizontal_padding"
      android:layout_marginTop="6dp"
      android:background="@drawable/register_add_picture_rounded"
      android:stateListAnimator="@null"
      app:layout_constraintTop_toBottomOf="@id/asset_photo_type_title" />

    <ImageView
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:src="@drawable/ic_add_picture"
      app:layout_constraintBottom_toBottomOf="@id/add_asset_photo_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/add_asset_photo_button" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>