<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.RegisterCheckListFragment">

  <data>

    <variable
      name="vm"
      type="com.idiot.more.ui.RegisterCheckListViewModel" />

    <variable
      name="adapter"
      type="com.idiot.more.ui.adapter.RegisterCheckListOwnerAdapter" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
      android:id="@+id/toolbar_manage_asset"
      layout="@layout/toolbar_layout"
      app:title="@{`AR 체크리스트`}" />

    <androidx.appcompat.widget.AppCompatImageButton
      android:id="@+id/back_button"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginStart="@dimen/app_horizontal_padding"
      android:background="@android:color/transparent"
      android:src="@drawable/ic_btn_back"
      app:layout_constraintBottom_toBottomOf="@id/toolbar_manage_asset"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/toolbar_manage_asset" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/home_appliance_tab"
      selectedCategory="@{vm.selectedCategory == 0}"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:gravity="center"
      android:onClick="@{() -> vm.changAssetCategory(0)}"
      android:paddingHorizontal="12dp"
      android:paddingVertical="10dp"
      android:text="@string/category_home_appliance"
      android:textSize="14sp"
      app:layout_constraintEnd_toStartOf="@id/furniture_tab"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/toolbar_manage_asset" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/furniture_tab"
      selectedCategory="@{vm.selectedCategory == 1}"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:onClick="@{() -> vm.changAssetCategory(1)}"
      android:paddingHorizontal="12dp"
      android:paddingVertical="10dp"
      android:text="@string/category_furniture"
      android:textSize="14sp"
      app:layout_constraintEnd_toStartOf="@id/bathroom_tab"
      app:layout_constraintStart_toEndOf="@id/home_appliance_tab"
      app:layout_constraintTop_toTopOf="@id/home_appliance_tab" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/bathroom_tab"
      selectedCategory="@{vm.selectedCategory == 2}"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:onClick="@{() -> vm.changAssetCategory(2)}"
      android:paddingHorizontal="12dp"
      android:paddingVertical="10dp"
      android:text="@string/category_bathroom"
      android:textSize="14sp"
      app:layout_constraintEnd_toStartOf="@id/interior_tab"
      app:layout_constraintStart_toEndOf="@id/furniture_tab"
      app:layout_constraintTop_toTopOf="@id/home_appliance_tab" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/interior_tab"
      selectedCategory="@{vm.selectedCategory == 3}"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:onClick="@{() -> vm.changAssetCategory(3)}"
      android:paddingHorizontal="12dp"
      android:paddingVertical="10dp"
      android:text="@string/category_interior"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/bathroom_tab"
      app:layout_constraintTop_toTopOf="@id/home_appliance_tab" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/asset_list_recycler_view"
      assetAdapter="@{adapter}"
      dividerColor="@{@color/divider}"
      submitAssetList="@{vm.filteredAssetList}"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintBottom_toTopOf="@id/complete_button"
      app:layout_constraintTop_toBottomOf="@id/interior_tab"
      tools:listitem="@layout/list_item_check_list_owner" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/complete_button"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:background="@color/purple_700"
      android:gravity="center"
      android:text="완료"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>


</layout>