<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.RegisterARActivity">

  <data>

    <variable
      name="adapter"
      type="com.idiot.more.ui.adapter.AssetCloudAnchorAdapter" />

    <variable
      name="vm"
      type="com.idiot.more.ui.RegisterARViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/ar_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.github.sceneview.ar.ArSceneView
      android:id="@+id/scene_view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/asset_recycler_view"
      adapter="@{adapter}"
      submitList="@{vm.assetList}"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:layout_marginTop="28dp"
      android:clipToPadding="false"
      android:fadeScrollbars="true"
      android:orientation="horizontal"
      android:stateListAnimator="@null"
      app:itemAnimator="@{null}"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintTop_toTopOf="parent"
      tools:listitem="@layout/list_item_asset_ar" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/add_checklist_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_add_checklist"
      android:gravity="center"
      android:padding="8dp"
      android:text="@string/add_checklist"
      android:textColor="@color/white"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@id/checklist_complete_button"
      app:layout_constraintStart_toStartOf="@id/checklist_complete_button"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias=".8" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/checklist_complete_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="13dp"
      android:background="@drawable/bg_complete_checklist"
      android:gravity="center"
      android:padding="8dp"
      android:text="@string/complete_checklist"
      android:textColor="@color/purple_700"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/add_checklist_button" />

    <FrameLayout
      android:id="@+id/loading_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_anchoring_asset_loading"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.4"
      tools:visibility="visible">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/loading_title"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/anchoring_loading_title"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>

      </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>